# lanlu

./: .cnb.yml  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  archive-detail-redesign.html  cangjie-repo.toml  cjpm.toml  docker-compose.yml  todo.md
.cnb/: Dockerfile.build-env
.gitea/workflows/: build.yaml  cli.yaml  (+1 more)
.ide/: Dockerfile
cli/: Cargo.toml  SKILL.md  cjpm.toml  package.json
cli/scripts/: api_client.mjs  archive_cmds.mjs  cover_cmds.mjs  info_cmds.mjs  json_utils.mjs  lanlu-cli  main.mjs  poll.mjs  source_cmds.mjs  tankoubon_cmds.mjs  task_cmds.mjs  update_metadata_cmds.mjs
cli/src/: api_client.cj  archive_cmds.cj  client.rs  json_utils.cj  main.cj  main.rs  output.rs  poll.cj  source_cmds.cj  task_cmds.cj
cli/src/cmds/: cover.rs  download_upload.rs  info.rs  metadata.rs  mod.rs  search.rs  source.rs  tankoubon.rs  task.rs
client/: App.tsx  README.md  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json
client-next/: README.md  cjpm.toml
extension/: .gitignore  background.js  package.json  pnpm-lock.yaml  popup.tsx  tailwind.config.ts  tsconfig.json
frontend/: eslint.config.mjs  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
mcp/: Cargo.toml  README.md
mcp/.cargo/: config.toml
mcp/src/: client.rs  main.rs  protocol.rs  utils.rs
mcp/src/tools/: archive.rs  category.rs  cover.rs  download_upload.rs  info.rs  metadata.rs  mod.rs  search.rs  source.rs  tankoubon.rs  task.rs
plugins/: base_plugin.ts  deno_fetch.ts
scripts/: checklanlu.js
src/: main.cj
(+939 files in other folders)
